# bachelor-thesis

./: .editorconfig  CMakeLists.txt  Grapple.cu  Grapple.cuh  Grapple.h  Hashtable-main.cu  Hashtable.cu  Hashtable.cuh  Hashtable_test.cu  LICENSE  Queue-main.cu  Queue.cu  Queue.cuh  README.md  State.cu  State.cuh  main.cpp  main.tex  refs.bib
.github/ISSUE_TEMPLATE/: task-template.md
evaluation/: EXP-00-comparison-with-paper.ipynb  EXP-01-comparison-waypoints-hll.ipynb  EXP-02-large-hash-table.ipynb  EXP-03-shared-kernel.ipynb  EXP-04-start-overs.ipynb  EXP-10-dining-philosophers-processes.ipynb  EXP-11-bfs-frontiers.ipynb  EXP-12-model-comparison.ipynb  EXP-13-start-overs-low-connectivity.ipynb  README.md  environment.yml  presentation.mplstyle
evaluation/.devcontainer/: devcontainer.json
evaluation/data/: EXP-00-comparison-with-paper.csv  EXP-02-large-hash-table-1.csv  EXP-02-large-hash-table-2.csv  EXP-03-shared-kernel-1.csv  EXP-03-shared-kernel-2.csv  EXP-04-start-overs-2.csv  EXP-10-dining-philosophers-processes-1.csv  EXP-10-dining-philosophers-processes-2.csv  EXP-10-dining-philosophers-processes-3.csv  EXP-11-bfs-frontiers-1.csv  EXP-11-bfs-frontiers-2.csv  EXP-11-bfs-frontiers-3.csv  EXP-11-bfs-frontiers-4.csv  EXP-11-bfs-frontiers-5.csv  EXP-12-model-comparison-1.csv  EXP-12-model-comparison-4.csv  EXP-13-start-overs-low-connectivity-1.csv  EXP-13-start-overs-low-connectivity-2.csv  EXP-13-start-overs-low-connectivity-3.csv  EXP-13-start-overs-low-connectivity-4.csv  EXP-13-start-overs-low-connectivity-6.csv
experimental-implementation/: main.tex
implementation/: .clang-format  .gitignore  CMakeLists.txt  README.md
implementation/src/: CheapRingBuffer.cuh  CheapRingBuffer_test.cu  CudaHelper.cuh  Grapple.cu  Grapple.cuh  Hashtable.cu  Hashtable.cuh  Hashtable_test.cu  HyperLogLog.cuh  HyperLogLog_constants.cuh  HyperLogLog_test.cu  JenkinsHash.cu  JenkinsHash.cuh  MurMurHash3.cu  MurMurHash3.cuh  OutputBuffer.cuh  OutputBuffer_test.cu  Queue.cuh  Queue_test.cu  State.cu  State.cuh  main.cu
implementation/src/models/: AndersonState.cu  AndersonState.cuh  AndersonState_test.cu  BaseState.cuh  PetersonState.cu  PetersonState.cuh  PhilosophersState.cu  PhilosophersState.cuh  PhilosophersStateV2.cu  PhilosophersStateV2.cuh  PhilosophersState_test.cu  README.md  WaypointsState.cu  WaypointsState.cuh  WaypointsState_test.cu
src/: Grapple.cu  Grapple.cuh  Hashtable.cu  Hashtable.cuh  Queue.cu  State.cu  State.cuh  main.cpp  main.cu
storylines/: main.tex
writeup/: main.tex  refs.bib  stsreprt.cls  title-TUHH-STS.def  title-TUHH-dis.def
writeup/.devcontainer/: Dockerfile  devcontainer.json
writeup/final-presentation/: main.tex
writeup/presentation/: main.tex
